--- a/index.html
+++ b/index.html
@@ -11,19 +11,13 @@
 <body>
     
 <form action="">
-    <label for="a">a:</label>
-    <input type="number" id="a" name ="a"/>
-    <p>X^2</p>
-    <label for="b">b:</label>
-    <input type="number" id="b" name="b">
-    <p>X</p>
-    <label for="c">C:</label>
-    <input type="number" id="c" name="c">
+    <label for="u">Napětí[V]:</label>
+    <input type="number" id="u" name ="u"/>
+    <label for="a">Proud[I]:</label>
+    <input type="number" id="a" name="a">
+    <label for="o">Odpor[Ω]:</label>
+    <input type="number" id="o" name="o">
     <input type="button" id="vypocet" value="vypocitej" onclick="Calculate()">
-    <p>X1:</p>
-    <label id="x1" name="x1"></label>
-    <p>X2</p>
-    <label id="x2" name="x2"></label>
 </form>
 
 <script>
