--- a/index.html
+++ b/index.html
@@ -23,18 +23,10 @@
             <label for="o">Odpor[Ω]:</label>
             <br><input type="number" id="o" name="o">
             <p></p>
-            <input type="button" id="vypocet" value="vypocitej" onclick=Calculate()>
+            <input type="button" id="vypocet" value="vypocitej" onclick="Calculate()">
             <p id="vysledek"></p>
         </form>
     </div>
-
-
-<script>
-    function Calculate()
-    {
-
-    }
-</script>
 
 </body>
 </html>
